# vsomeip-demo

./: CMakeLists.txt  README.md
config/: vsomeip-local.json
scripts/: envsetup.sh  gen.sh  run.sh
